fix issue with cursor misalignment.

--- a/stylesheets/base.less
+++ b/stylesheets/base.less
@@ -8,8 +8,7 @@
 .editor {
   .invisible-character,
   .indent-guide {
-    color: transparent;
-    border-left: 1px dotted @base2;
+    color: @base2;
   }
 
   .gutter .line-number {
